{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 197,
  "lineage": "bbc660cf-3c4b-434e-3e6a-04106c98881b",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa097a5c0d31430a",
            "arn": "arn:aws:ec2:ap-southeast-1:325842618176:instance/i-04b976e80c57d5561",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04b976e80c57d5561",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ddda330912573202",
            "private_dns": "ip-10-0-2-10.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d15cbfe0231373c5",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07f58842775ca2ac0",
            "tags": {
              "Name": "Lab02-private"
            },
            "tags_all": {
              "Name": "Lab02-private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ea43e4ee802e8a82"
            ]
          },
          "dependencies": [
            "module.sg.aws_security_group.lab_sg",
            "module.vpc.aws_subnet.private_subnet_b",
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa097a5c0d31430a",
            "arn": "arn:aws:ec2:ap-southeast-1:325842618176:instance/i-024266e8103a4c50d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-024266e8103a4c50d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0601a68409555ddeb",
            "private_dns": "ip-10-0-3-188.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.188",
            "public_dns": "ec2-52-221-249-123.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.221.249.123",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fed2b8c57bd0b636",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0262a133a938d14d4",
            "tags": {
              "Name": "Lab02-public"
            },
            "tags_all": {
              "Name": "Lab02-public"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ea43e4ee802e8a82"
            ]
          },
          "dependencies": [
            "module.sg.aws_security_group.lab_sg",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lab_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:325842618176:security-group/sg-0ea43e4ee802e8a82",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ea43e4ee802e8a82",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240927100817344400000001",
            "name_prefix": "terraform-",
            "owner_id": "325842618176",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Lab02-sg"
            },
            "tags_all": {
              "Name": "Lab02-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb20c002143e84d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "lab_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ae26f099ce21185b",
            "arn": "arn:aws:ec2:ap-southeast-1:325842618176:elastic-ip/eipalloc-0ae26f099ce21185b",
            "association_id": "eipassoc-033fe175782a55172",
            "domain": "vpc",
            "id": "eipalloc-0ae26f099ce21185b",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0b7e6bc61e44fed29",
            "private_dns": "ip-10-0-3-154.ap-southeast-1.compute.internal",
            "private_ip": "10.0.3.154",
            "public_dns": "ec2-54-169-156-36.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.169.156.36",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "lab_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:325842618176:internet-gateway/igw-0f82debfdb7a35278",
            "id": "igw-0f82debfdb7a35278",
            "owner_id": "325842618176",
            "tags": {
              "Name": "Lab02-igw"
            },
            "tags_all": {
              "Name": "Lab02-igw"
            },
            "vpc_id": "vpc-0eb20c002143e84d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "lab_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ae26f099ce21185b",
            "association_id": "eipassoc-033fe175782a55172",
            "connectivity_type": "public",
            "id": "nat-04cc2b74c993ca8c8",
            "network_interface_id": "eni-0b7e6bc61e44fed29",
            "private_ip": "10.0.3.154",
            "public_ip": "54.169.156.36",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0262a133a938d14d4",
            "tags": {
              "Name": "Lab02-nat"
            },
            "tags_all": {
              "Name": "Lab02-nat"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.lab_nat_eip",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:325842618176:route-table/rtb-0d8b0cb9c723d3064",
            "id": "rtb-0d8b0cb9c723d3064",
            "owner_id": "325842618176",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-04cc2b74c993ca8c8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Lab02-private_route_table"
            },
            "tags_all": {
              "Name": "Lab02-private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb20c002143e84d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.lab_nat_eip",
            "module.vpc.aws_nat_gateway.lab_nat",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:325842618176:route-table/rtb-02e75035b2f62ba5a",
            "id": "rtb-02e75035b2f62ba5a",
            "owner_id": "325842618176",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f82debfdb7a35278",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Lab02-public_route_table"
            },
            "tags_all": {
              "Name": "Lab02-public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb20c002143e84d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.lab_igw",
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_assoc_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0220356fcd66a7161",
            "route_table_id": "rtb-0d8b0cb9c723d3064",
            "subnet_id": "subnet-06972f7888f421d09"
          },
          "dependencies": [
            "module.vpc.aws_eip.lab_nat_eip",
            "module.vpc.aws_nat_gateway.lab_nat",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnet_a",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_assoc_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08da70e763d815b52",
            "route_table_id": "rtb-0d8b0cb9c723d3064",
            "subnet_id": "subnet-07f58842775ca2ac0"
          },
          "dependencies": [
            "module.vpc.aws_eip.lab_nat_eip",
            "module.vpc.aws_nat_gateway.lab_nat",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnet_b",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_assoc_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e39020e5a6c11aa",
            "route_table_id": "rtb-02e75035b2f62ba5a",
            "subnet_id": "subnet-0262a133a938d14d4"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.lab_igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_assoc_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f0c6aa2c9038cd5",
            "route_table_id": "rtb-02e75035b2f62ba5a",
            "subnet_id": "subnet-0d24505cef62c4996"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.lab_igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet_b",
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:325842618176:subnet/subnet-06972f7888f421d09",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06972f7888f421d09",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "325842618176",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Lab02-private_subnet_a"
            },
            "tags_all": {
              "Name": "Lab02-private_subnet_a"
            },
            "vpc_id": "vpc-0eb20c002143e84d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:325842618176:subnet/subnet-07f58842775ca2ac0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f58842775ca2ac0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "325842618176",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Lab02-private_subnet_b"
            },
            "tags_all": {
              "Name": "Lab02-private_subnet_b"
            },
            "vpc_id": "vpc-0eb20c002143e84d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:325842618176:subnet/subnet-0262a133a938d14d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0262a133a938d14d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "325842618176",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Lab02-public_subnet_a"
            },
            "tags_all": {
              "Name": "Lab02-public_subnet_a"
            },
            "vpc_id": "vpc-0eb20c002143e84d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:325842618176:subnet/subnet-0d24505cef62c4996",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d24505cef62c4996",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "325842618176",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Lab02-public_subnet_b"
            },
            "tags_all": {
              "Name": "Lab02-public_subnet_b"
            },
            "vpc_id": "vpc-0eb20c002143e84d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lab_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:325842618176:vpc/vpc-0eb20c002143e84d0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-057e3b74a820d9ae5",
            "default_route_table_id": "rtb-044437775bea0252f",
            "default_security_group_id": "sg-077f02cdcbba897a1",
            "dhcp_options_id": "dopt-02706d56e1ab7d416",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eb20c002143e84d0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-044437775bea0252f",
            "owner_id": "325842618176",
            "tags": {
              "Name": "Lab02-vpc"
            },
            "tags_all": {
              "Name": "Lab02-vpc"
            }
          }
        }
      ]
    }
  ]
}